@@ -41,6 +41,9 @@
  *    $Locker$ (who has reserved checkout)
  *  Log:
  *    $Log$
+ *    Revision 1.12  2003/05/26 08:25:49  bfo
+ *    "double" big/little endian problem module sizes fixed
+ *
  *    Revision 1.11  2003/04/20 23:08:45  bfo
  *    "inetdb" adaptions and other manipulations
  *
@@ -149,6 +152,51 @@ const byte Init_mod[] = {
 };
 mod_exec* Init_ptr= (mod_exec*)Init_mod;   /* ptr to Init module */
 #define sizeof_Init_mod 366
+
+
+/* "socket" builtin module, defined as constant array */
+const byte Socket_mod[] = {
+    0x4a,0xfc,0x00,0x01,0x00,0x00,0x01,0x18,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xf3,  //  J|.............s
+    0x05,0x55,0x0f,0x00,0x80,0x00,0x00,0xc8,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,  //  .U.....H........
+    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x3e,0x74,  //  ..............>t
+    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x03,0x00,0xeb,0x00,0xe3,0x00,0x00,0x00,0x00,  //  .........k.c....
+    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x01,0x07,0x00,0x00,0x00,0x00,0x00,0x00,0x00,  //  ................
+    0x00,0x00,0x00,0x00,0x08,0x00,0x00,0x00,0x40,0x00,0x00,0x00,0x40,0x00,0x00,0x00,  //  ........@...@...
+    0x00,0x80,0x00,0xc8,0x00,0xae,0x00,0x68,0x00,0x02,0x00,0x00,0x00,0x00,0x00,0x02,  //  ...H...h........
+    0x00,0xfa,0x00,0x02,0x00,0x03,0x00,0x00,0x00,0x01,0x01,0x07,0x00,0x02,0x00,0x02,  //  .z..............
+    0x00,0x11,0x00,0x01,0x01,0x03,0x00,0x02,0x00,0x01,0x00,0x06,0x00,0x01,0x00,0xff,  //  ................
+    0x00,0x0c,0x00,0x03,0x00,0x00,0x00,0x01,0x00,0xd2,0x00,0x01,0x00,0x01,0x00,0x00,  //  .........R......
+    0x00,0x01,0x00,0xdb,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x2f,0x6c,  //  ...[........../l
+    0x6f,0x30,0x20,0x2f,0x6c,0x65,0x30,0x20,0x2f,0x6c,0x65,0x31,0x20,0x2f,0x73,0x6c,  //  o0 /le0 /le1 /sl
+    0x31,0x20,0x2f,0x6c,0x62,0x70,0x30,0x00,0x4c,0x6f,0x63,0x61,0x6c,0x48,0x6f,0x73,  //  1 /lbp0.LocalHos
+    0x74,0x00,0x61,0x66,0x5f,0x65,0x74,0x68,0x65,0x72,0x00,0x61,0x66,0x5f,0x75,0x6e,  //  t.af_ether.af_un
+    0x69,0x78,0x00,0x73,0x6f,0x63,0x6b,0x64,0x76,0x72,0x00,0x73,0x6f,0x63,0x6b,0x6d,  //  ix.sockdvr.sockm
+    0x61,0x6e,0x00,0x73,0x6f,0x63,0x6b,0x65,0x74,0x00,0x69,0x6e,0x65,0x74,0x00,0x74,  //  an.socket.inet.t
+    0x63,0x70,0x00,0x75,0x64,0x70,0x00,0x69,0x70,0x00,0x00,0x00,0x00,0x00,0x00,0x00,  //  cp.udp.ip.......
+    0x00,0x00,0x00,0x00,0x00,0xb2,0xc9,0x87                                           //  .....2I.
+};
+mod_exec* Socket_ptr= (mod_exec*)Socket_mod;   /* ptr to socket module */
+#define sizeof_Socket_mod 280
+
+
+/* "le0" builtin module, defined as constant array */
+const byte Le0_mod[] = {
+    0x4a,0xfc,0x00,0x01,0x00,0x00,0x00,0xbc,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xab,  //  J|.....<.......+
+    0x05,0x55,0x0f,0x01,0x80,0x00,0x00,0xc8,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,  //  .U.....H........
+    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x3f,0x89,  //  ..............?.
+    0xfe,0xc6,0x80,0x00,0x47,0x03,0x05,0x03,0x00,0xa5,0x00,0x96,0x00,0x00,0x00,0x00,  //  ~F..G....%......
+    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x01,0x09,0x00,0x00,0x00,0x00,0xab,0x05,0xdc,  //  .............+..
+    0x00,0x22,0x00,0x86,0xff,0xff,0xff,0x00,0x00,0x76,0x00,0x9f,0x00,0x00,0x00,0x00,  //  .".......v......
+    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,  //  ................
+    0x04,0x04,0x00,0x00,0x00,0x00,0x00,0x02,0x00,0x00,0x98,0x58,0x6e,0xff,0x00,0x00,  //  ...........Xn...
+    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x02,0x00,0x00,0x98,0x58,0x6e,0x73,0x00,0x00,  //  ...........Xns..
+    0x00,0x00,0x00,0x00,0x00,0x00,0x69,0x66,0x5f,0x69,0x6c,0x61,0x63,0x63,0x00,0x00,  //  ......if_ilacc..
+    0x00,0x00,0x00,0x00,0x00,0x69,0x66,0x6d,0x61,0x6e,0x00,0x6c,0x65,0x30,0x00,0x00,  //  .....ifman.le0..
+    0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xf6,0x57,0x1c                       //  .........vW.
+};
+mod_exec* Le0_ptr= (mod_exec*)Le0_mod;   /* ptr to le0 module */
+#define sizeof_Le0_mod 188
+
 
 
 /* offset definitions for module "inetdb" */
@@ -544,7 +592,7 @@ static void adapt_le0( mod_exec* mh, ulong inetAddr )
 {
     char*  bp;
     ulong* lp;
-    
+        
     bp= (byte*) mh + 0x7a;        /* broadcast address position */
     lp= (ulong*)bp;
    *lp= os9_long(inetAddr);
@@ -834,6 +882,30 @@ os9err load_module(ushort pid, char *name, ushort *midP, Boolean exedir,
                 break; /* found */
             } /* if built-in Init module */
 
+            /* 1c: Check if it is the built-in "socket" module */
+            if (ustrcmp(name,"socket")==0) {
+                Socket_ptr = (mod_exec*)Socket_mod;
+                dsize      =     sizeof_Socket_mod;
+                theModuleP =            Socket_ptr;
+                isBuiltIn  = true;
+                break; /* found */
+            } /* if built-in socket module */
+
+            /* 1d: Check if it is the built-in "le0" module */
+            if (ustrcmp(name,"le0")==0) {
+                Le0_ptr= (mod_exec*)Le0_mod;
+                dsize  =     sizeof_Le0_mod;
+                
+                /* it can't be const def, because it wil be changed afterwards */
+                pp= get_mem( dsize );
+           	
+                        theModuleP= pp;
+                memcpy( theModuleP, Le0_ptr, dsize );
+             
+                isBuiltIn= true;
+                break; /* found */
+            } /* if built-in Le0 module */
+
             
             /* 2: Assume loading from the {OS9MDIR} directory */
             /* %%% this part is not yet adapted for access through filestuff interface */
@@ -1062,6 +1134,10 @@ modulefound:
         } /* if */
         
         	crc= calc_crc( (byte*)theModuleP, modSize, 0xFFFFFFFF );
+ //     if (ustrcmp(name,"le0")==0) {
+ //         upe_printf( "crc %08X\n", crc );
+ //         crc= 0xFF800FE3;
+ //     }
         if (crc!=0xFF800FE3) {
             debugprintf(dbgModules,dbgNorm,
               ("# load_module: bad crc, crc result=$%08lX (should be $FF800FE3)\n",crc));
